# api

./: Cargo.toml
src/: errors.rs  main.rs
src/auth/: db.rs  encryption.rs  handlers.rs  mod.rs  model.rs  registration.rs
src/category/: db.rs  handlers.rs  models.rs
src/mail/: mailer.rs  mod.rs  model.rs
src/post_old/: db.rs  handlers.rs  mod.rs  model.rs
src/posts/: db.rs  handlers.rs  models.rs
src/tags/: db.rs  handlers.rs  models.rs
